[gd_scene load_steps=5 format=2]

[ext_resource path="res://Ball/Ball.gd" type="Script" id=1]
[ext_resource path="res://Ball/images/ball.png" type="Texture" id=2]
[ext_resource path="res://Ball/sounds/461118__vhschool2019__basketball__modified.wav" type="AudioStream" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 15.6567

[node name="Ball" type="RigidBody2D"]
mass = 10.0
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="LifeTimer" type="Timer" parent="."]

[node name="HitSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="CollisionTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true
